--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Mathesh",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/paypal-server-sdk": "^1.1.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -16,6 +19,9 @@
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
+    "pdfkit": "^0.17.2",
+    "razorpay": "^2.9.6",
     "stripe": "^19.1.0"
   },
   "devDependencies": {
