--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mathesh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -16,6 +17,7 @@
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
     "stripe": "^19.1.0"
   },
   "devDependencies": {
