--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mathesh",
   "license": "ISC",
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
